--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>jambon</h1>
+	
+	<button id="buttonPlay">Play</button>
 
-	<script src="app.js"></script>
+	<div id="sequencer"></div>
+
+	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="Tone.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 
 </body>
 </html>
