now using konva for orchestra map + pan control by dragging elements on map

--- a/static/index.html
+++ b/static/index.html
@@ -3,12 +3,21 @@
 <head>
 	<meta charset="utf-8">
 	<title>jambon</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
-	<button id="buttonPlay">Play</button>
+	<div id="player-controls">
+		<button id="buttonPlay">Play</button>
+	</div>
 
-	<div id="sequencer"></div>
+	<div id="participants"></div>
+
+	<div id="orchestra-map"></div>
+
+	<div id="step-sequencer"></div>
+
+	<div id="piano-roll"></div>
 
 	<script type="text/javascript" src="dist/bundle.js"></script>
 
