login popup + participants pannel

--- a/static/index.html
+++ b/static/index.html
@@ -7,15 +7,22 @@
 </head>
 <body>
 
-	<div id="player-controls">
-		<button id="buttonPlay">Play</button>
+	<div id="screen-blocker">
+		<div id="login-popup">
+			<input type="text" name="name" id="field-name">
+			<button id="finish-login">Ok</button>
+		</div>
 	</div>
 
-	<div id="orchestra-map"></div>
-
-	<div id="step-sequencer"></div>
-
-	<div id="piano-roll"></div>
+	<div id="main-content">
+		<div id="participants"></div>
+		<div id="player-controls">
+			<button id="buttonPlay">Play</button>
+		</div>
+		<div id="orchestra-map"></div>
+		<div id="step-sequencer"></div>
+		<div id="piano-roll"></div>
+	</div>
 
 	<script type="text/javascript" src="dist/bundle.js"></script>
 
