bpm control during session

--- a/static/index.html
+++ b/static/index.html
@@ -60,6 +60,8 @@
 
 		<div id="player-controls">
 			<button id="play-pause">Play</button>
+
+			<input type="range" id="session-bpm" min="10" max="200" value="90">
 		</div>
 
 		<div id="orchestra-map"></div>
